--- a/Dockerfile.n
+++ b/Dockerfile.n
@@ -9,6 +9,7 @@ RUN apt-get update && apt-get install -y \
     libzip-dev \
     && docker-php-ext-install zip \
     mbstring \
+    pgsql \
     zip \
     xml \
     curl \
