--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@ DB_USERNAME=postgres
 DB_PASSWORD=postgres
 
 BROADCAST_DRIVER=pusher
-CACHE_DRIVER=memcached
+CACHE_DRIVER=file
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
