--- a/.env.testing
+++ b/.env.testing
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=pgsql
-DB_HOST=127.0.0.1
+DB_HOST=ep-twilight-meadow-a5foow94.us-east-2.aws.neon.tech
 DB_PORT=5432
-DB_DATABASE=tales_of_mope
-DB_USERNAME=postgres
-DB_PASSWORD=postgres
+DB_DATABASE=tales-of-mope
+DB_USERNAME=aicemaria112
+DB_PASSWORD=cesar*9701
 
 BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
